--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
-
 <html>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>JogWithFriends</title>
-    <script src="http://extjs.cachefly.net/touch/sencha-touch-2.1.0/sencha-touch-all.js"></script>
-    <link rel="stylesheet" href="http://extjs.cachefly.net/touch/sencha-touch-2.1.0/resources/css/sencha-touch.css">
-    <link rel="stylesheet" href="resources/css/jogwithfriends.css">
-    <script type="text/javascript" src="resources/js/app.js"></script>
-    <script type="text/javascript">
-        if (!Ext.browser.is.WebKit) {
-            alert("The current browser is unsupported.\n\nSupported browsers:\n" +
-                "Google Chrome\n" +
-                "Apple Safari\n" +
-                "Mobile Safari (iOS)\n" +
-                "Android Browser\n" +
-                "BlackBerry Browser"
-            );
-        }
-    </script>
-</head>
-<body></body>
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no">
+        <meta name="apple-mobile-web-app-capable" content="yes">
+        <meta name="apple-touch-fullscreen" content="yes">
+
+        <title>Sencha Jog</title>
+
+        <link rel="stylesheet" href="resources/css/jogwithfriends.css" type="text/css" />
+        <link rel="apple-touch-icon" href="resources/icons/icon.png" />
+    </head>
+    <body id="rwf-body">
+        <div id="fb-root" style="display: none;"></div>
+        <div id="splashLoader">
+            <div id="loading">
+                <span class="loadTxt">Loading</span>
+                <div class="x-loading-spinner"><span class="x-loading-top"></span><span class="x-loading-right"></span><span class="x-loading-bottom"></span><span class="x-loading-left"></span></div>
+            </div>
+        </div>
+        <script type="text/javascript" src="http://extjs.cachefly.net/touch/sencha-touch-2.0.1/sencha-touch-all-debug.js"></script>
+        <script type="text/javascript" src="resources/js/app.js"></script>
+    </body>
 </html>
