--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-touch-fullscreen" content="yes">
 
-        <title>Sencha Jog</title>
+        <title>Tafies App</title>
 
         <link rel="stylesheet" href="resources/css/jogwithfriends.css" type="text/css" />
         <link rel="apple-touch-icon" href="resources/icons/icon.png" />
@@ -15,11 +15,12 @@
         <div id="fb-root" style="display: none;"></div>
         <div id="splashLoader">
             <div id="loading">
-                <span class="loadTxt">Loading</span>
+                <span class="loadTxt">Cargando</span>
                 <div class="x-loading-spinner"><span class="x-loading-top"></span><span class="x-loading-right"></span><span class="x-loading-bottom"></span><span class="x-loading-left"></span></div>
             </div>
         </div>
-        <script type="text/javascript" src="http://extjs.cachefly.net/touch/sencha-touch-2.0.1/sencha-touch-all-debug.js"></script>
+        <script type="text/javascript" src="--http://extjs.cachefly.net/touch/sencha-touch-2.0.1/sencha-touch-all-debug.js"></script>
+        <script type="text/javascript" src="http://extjs.cachefly.net/touch/sencha-touch-2.0.1/sencha-touch-all.js"></script>
         <script type="text/javascript" src="resources/js/app.js"></script>
     </body>
 </html>
