--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
         <title>Tafies App</title>
 
         <link rel="stylesheet" href="resources/css/jogwithfriends.css" type="text/css" />
+        <link rel="stylesheet" href="resources/css/style.css" type="text/css" />
         <link rel="apple-touch-icon" href="resources/icons/icon.png" />
     </head>
     <body id="rwf-body">
